--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,60 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.compileSdkVersion = 26
+    ext.buildToolsVersion = '26.0.2'
+    ext.minSdkVersion =  21
+    ext.targetSdkVersion =  26
+    ext.versionCode =  1
+    ext.versionName =  '1.0'
+
+    ext.supportLibs = '27.0.1'
+    ext.constraint_layout = '1.0.2'
+    ext.multidex = '1.0.2'
+
     ext.kotlin_version = '1.1.51'
+    ext.anko_version = '0.10.1'
+
+    ext.gson = '2.8.0'
+    ext.retrofit = '2.3.0'
+    ext.okhttp_urlconnection = '3.2.0'
+    ext.logging_interceptor = '3.4.1'
+    ext.okhttp = '3.7.0'
+
+    ext.rxandroid = '2.0.1'
+    ext.rxjava = '2.1.0'
+
+    ext.dagger = '2.11'
+    ext.stetho = '1.5.0'
+    ext.picasso = '2.5.2'
+
+    ext.junit = '4.12'
+    ext.runner = '0.5'
+    ext.espresso = '3.0.1'
+    ext.mockito = '2.7.12'
+    ext.robolectric = '3.3'
+
+    ext.arch = "1.0.0"
+    ext.arch_lifecycle = "1.0.3"
+    ext.mockwebserver = "3.8.1"
+    ext.apache_commons = "2.5"
+    ext.mockito = "2.7.19"
+    ext.mockito_all = "1.10.19"
+    ext.dexmaker = "2.2.0"
+    ext.timber = "4.5.1"
+    ext.atsl_runner = "1.0.1"
+    ext.atsl_rules = "1.0.1"
+    ext.hamcrest = "1.3"
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
