--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.fabric'
+
 android {
 
     compileSdkVersion rootProject.compileSdkVersion
@@ -153,9 +155,12 @@ dependencies {
     implementation "android.arch.lifecycle:common-java8:${rootProject.arch}"
     kapt "android.arch.lifecycle:compiler:${rootProject.arch}"
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
-        transitive = true;
+    implementation("com.crashlytics.sdk.android:crashlytics:${rootProject.crashlytics}@aar") {
+        transitive = true
     }
+
+    implementation "com.google.firebase:firebase-core:${rootProject.firebase}"
+    implementation "com.google.firebase:firebase-messaging:${rootProject.firebase}"
 
     // Test libs
     testImplementation "junit:junit:${rootProject.junit}"
@@ -197,3 +202,4 @@ dependencies {
         exclude group: 'net.bytebuddy'
     }
 }
+apply plugin: 'com.google.gms.google-services'
