--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ buildscript {
     ext.constraint_layout = '1.0.2'
     ext.multidex = '1.0.2'
 
-    ext.kotlin_version = '1.1.51'
+    ext.crashlytics = '2.7.1'
+    ext.firebase = '11.6.0'
+
+    ext.kotlin_version = '1.1.60'
     ext.anko_version = '0.10.1'
 
     ext.gson = '2.8.0'
@@ -56,7 +59,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'io.fabric.tools:gradle:1.22.2'
+        classpath 'io.fabric.tools:gradle:1.24.4'
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 
