--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,7 @@ dependencies {
     implementation "com.android.support:design:${rootProject.supportLibs}"
     implementation "com.android.support:support-vector-drawable:${rootProject.supportLibs}"
     implementation "com.android.support:cardview-v7:${rootProject.supportLibs}"
+    implementation "com.google.android:flexbox:0.2.6"
     implementation "com.android.support:multidex:${rootProject.multidex}"
 
     //kotlin
