--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'io.fabric'
 
+apply from: "$rootDir/config/quality.gradle"
+
+apply from: "./jacoco.gradle"
+
 android {
 
     compileSdkVersion rootProject.compileSdkVersion
@@ -70,20 +74,8 @@ android {
         }
     }
 
-    productFlavors {
-    }
-
-    packagingOptions {
-        exclude 'META-INF/rxjava.properties'
-    }
-
-    sourceSets {
-        androidTest.java.srcDirs += "src/test-common/java"
-        test.java.srcDirs += "src/test-common/java"
-    }
-
     lintOptions {
-        lintConfig rootProject.file('lint.xml')
+        disable "ResourceType"
     }
 }
 
@@ -115,69 +107,83 @@ dependencies {
     implementation "com.google.android:flexbox:0.2.6"
     implementation "com.android.support:multidex:${rootProject.multidex}"
 
-    //kotlin
+    // Firebase
+    implementation "com.google.firebase:firebase-core:${rootProject.firebase}"
+    implementation "com.google.firebase:firebase-messaging:${rootProject.firebase}"
+
+    // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$rootProject.kotlin_version"
     implementation "org.jetbrains.anko:anko-coroutines:${rootProject.anko_version}"
     implementation "org.jetbrains.anko:anko-commons:${rootProject.anko_version}"
     implementation "org.jetbrains.kotlin:kotlin-test-junit:${rootProject.kotlin_version}"
 
+    // Crashlytics
+    implementation("com.crashlytics.sdk.android:crashlytics:${rootProject.crashlytics}@aar") {
+        transitive = true
+    }
+
     // ReactiveX
     implementation "io.reactivex.rxjava2:rxandroid:${rootProject.rxandroid}"
     implementation "io.reactivex.rxjava2:rxjava:${rootProject.rxjava}"
+
+    // Retrofit
     implementation "com.squareup.retrofit2:adapter-rxjava2:${rootProject.retrofit}"
-    implementation "com.squareup.retrofit2:converter-gson:${rootProject.retrofit}"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
+
+    // Gson: Json Converter
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.retrofit}"
     implementation "com.google.code.gson:gson:${rootProject.gson}"
 
     // Image libs
     implementation "com.squareup.picasso:picasso:$picasso"
 
-    // Facebook Sthetho
+    // Facebook Sthetho for debug conections
     implementation "com.facebook.stetho:stetho:${rootProject.stetho}"
     implementation "com.facebook.stetho:stetho-okhttp3:${rootProject.stetho}"
 
-    //Timber
-    implementation "com.jakewharton.timber:timber:${rootProject.timber}"
-
-    // Dependency injection
-    implementation "com.google.dagger:dagger:${rootProject.dagger}"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    // Room Database
     implementation "android.arch.persistence.room:runtime:${rootProject.arch}"
     implementation "android.arch.persistence.room:rxjava2:${rootProject.arch}"
     implementation "android.arch.persistence.room:testing:${rootProject.arch}"
     kapt "android.arch.persistence.room:compiler:${rootProject.arch}"
 
+    // Lifecycle
     implementation "android.arch.lifecycle:runtime:${rootProject.arch_lifecycle}"
     implementation "android.arch.lifecycle:extensions:${rootProject.arch}"
-    implementation "android.arch.lifecycle:common-java8:${rootProject.arch}"
     kapt "android.arch.lifecycle:compiler:${rootProject.arch}"
 
-    implementation("com.crashlytics.sdk.android:crashlytics:${rootProject.crashlytics}@aar") {
-        transitive = true
-    }
+    // Dependency injection
+    kapt "com.google.dagger:dagger-compiler:$project.dagger"
+    implementation "com.google.dagger:dagger:$rootProject.dagger"
 
-    implementation "com.google.firebase:firebase-core:${rootProject.firebase}"
-    implementation "com.google.firebase:firebase-messaging:${rootProject.firebase}"
+    // Dagger Android
+    kapt "com.google.dagger:dagger-android-processor:$project.dagger"
+    implementation "com.google.dagger:dagger-android-support:$rootProject.dagger"
+
+    // Timber
+    implementation "com.jakewharton.timber:timber:${rootProject.timber}"
 
     // Test libs
     testImplementation "junit:junit:${rootProject.junit}"
     androidTestImplementation "com.android.support.test:runner:${rootProject.runner}"
-    testImplementation "org.robolectric:robolectric:${rootProject.robolectric}"
 
+    // Mokito
+    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:${rootProject.mockito_kotlin}"
+
+    // Hamcrest
+    testImplementation "org.hamcrest:java-hamcrest:${rootProject.hamcrest}"
+
+    // Mockserver for resquest mock
     testImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.mockwebserver}"
+
+    // Arch Test for Archtecture components test
     testImplementation("android.arch.core:core-testing:${rootProject.arch}", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
     })
-    testImplementation "org.mockito:mockito-core:${rootProject.mockito}"
 
-    androidTestImplementation "com.android.support:appcompat-v7:${rootProject.supportLibs}"
-    androidTestImplementation "com.android.support:recyclerview-v7:${rootProject.supportLibs}"
-    androidTestImplementation "com.android.support:cardview-v7:${rootProject.supportLibs}"
-    androidTestImplementation "com.android.support:design:${rootProject.supportLibs}"
-
+    // Espresso for UI test
     androidTestImplementation("com.android.support.test.espresso:espresso-core:${rootProject.espresso}", {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
@@ -191,13 +197,7 @@ dependencies {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
     testImplementation "com.android.support.test.espresso:espresso-idling-resource:${rootProject.espresso}"
-
     androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:2.1.3"
 
-    androidTestImplementation "android.arch.core:core-testing:${rootProject.arch}"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:${rootProject.dexmaker}"
-    androidTestImplementation "org.mockito:mockito-core:${rootProject.mockito}", {
-        exclude group: 'net.bytebuddy'
-    }
 }
 apply plugin: 'com.google.gms.google-services'
