--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     ext.crashlytics = '2.7.1'
     ext.firebase = '11.6.0'
 
-    ext.kotlin_version = '1.1.60'
+    ext.kotlin_version = '1.2.0'
     ext.anko_version = '0.10.1'
 
     ext.gson = '2.8.0'
@@ -42,13 +42,12 @@ buildscript {
     ext.arch_lifecycle = "1.0.3"
     ext.mockwebserver = "3.8.1"
     ext.apache_commons = "2.5"
-    ext.mockito = "2.7.19"
-    ext.mockito_all = "1.10.19"
+    ext.mockito_kotlin = "1.5.0"
     ext.dexmaker = "2.2.0"
-    ext.timber = "4.5.1"
+    ext.timber = "4.6.0"
     ext.atsl_runner = "1.0.1"
     ext.atsl_rules = "1.0.1"
-    ext.hamcrest = "1.3"
+    ext.hamcrest = "2.0.0.0"
 
     repositories {
         google()
