--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
     ext.firebase = '11.8.0'
 
     ext.kotlin_version = '1.2.21'
-    ext.anko_version = '0.10.1'
+    ext.anko_version = '0.10.4'
 
     ext.gson = '2.8.0'
     ext.retrofit = '2.3.0'
@@ -38,9 +38,13 @@ buildscript {
     ext.arch = "1.0.0"
     ext.arch_lifecycle = "1.1.0"
     ext.mockwebserver = "3.8.1"
+    ext.mockitoVersion = '2.13.0'
     ext.mockito_kotlin = "1.5.0"
     ext.timber = "4.6.0"
     ext.hamcrest = "2.0.0.0"
+    ext.testRunnerVersion = '1.0.1'
+    ext.requestMatcherVersion = '2.2.0'
+    ext.uiautomator = '2.1.3'
 
     repositories {
         google()
@@ -49,7 +53,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha02'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.24.4'
         classpath 'com.google.gms:google-services:3.1.0'
