Add companies and adjust share job

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,10 @@ kotlin {
     }
 }
 
+androidExtensions {
+    experimental = true
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
