Add companies and adjust share job

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ android {
             assets.srcDirs = ['src/main/assets']
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 allprojects {
