Add companies and jobs home layout to a fluid layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,7 @@
         <activity
             android:name=".view.detail.DetailActivity"
             android:parentActivityName=".view.home.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.home.MainActivity" />
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".domain.services.CustomFirebaseInstaceIdService">
             <intent-filter>
@@ -54,8 +50,8 @@
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.remoteok.io.app.fileprovider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths" />
