--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:${rootProject.supportLibs}"
     implementation "com.google.android:flexbox:0.2.6"
     implementation "com.android.support:multidex:${rootProject.multidex}"
+    implementation "org.apache.commons:commons-text:1.2"
     /*############################################################################*/
 
     /*############################## Firebase #####################################*/
