--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ buildscript {
     ext.junit = '4.12'
     ext.runner = '0.5'
     ext.espresso = '3.0.1'
-    ext.arch = "1.0.0"
+    ext.arch = "1.1.0"
     ext.arch_lifecycle = "1.1.1"
     ext.mockwebserver = "3.8.1"
     ext.mockitoVersion = '2.13.0'
@@ -53,7 +53,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha14'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.25.2'
         classpath 'com.google.gms:google-services:3.3.0'
