--- a/base/build.gradle
+++ b/base/build.gradle
@@ -82,7 +82,8 @@ dependencies {
     api "com.android.support:cardview-v7:${rootProject.supportLibs}"
     api "com.google.android:flexbox:0.2.6"
     api "com.android.support:multidex:${rootProject.multidex}"
-    implementation "org.apache.commons:commons-text:1.2"
+    api "org.apache.commons:commons-text:1.2"
+    api "com.google.android.instantapps:instantapps:1.1.0"
     /*############################################################################*/
 
     /*############################## Firebase #####################################*/
@@ -187,6 +188,6 @@ dependencies {
     /*############################################################################*/
 
     application project(':installed')
-
+    feature project(':home')
 }
 apply plugin: 'com.google.gms.google-services'
