--- a/instantapp/build.gradle
+++ b/instantapp/build.gradle
@@ -2,4 +2,5 @@ apply plugin: 'com.android.instantapp'
 
 dependencies {
     implementation project(':base')
+    implementation project(':home')
 }
