--- a/base/build.gradle
+++ b/base/build.gradle
@@ -72,6 +72,8 @@ androidExtensions {
 crashlytics { instantAppSupport true }
 
 dependencies {
+    api 'com.android.support:appcompat-v7:27.1.1'
+    api 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     /*###################### Android support  libs ###############################*/
@@ -189,5 +191,7 @@ dependencies {
 
     application project(':installed')
     feature project(':home')
+    feature project(":companies")
+    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 apply plugin: 'com.google.gms.google-services'
